# anything

./: pnpm-lock.yaml
core/crates/coordinator/src/: lib.rs  manager.rs
core/crates/coordinator/src/actors/: flow_actors.rs  update_actor.rs
core/crates/coordinator/src/processing/: processor.rs
core/crates/coordinator/tests/fixtures/: simple.toml
core/crates/graph/src/: error.rs
core/crates/graph/src/graph/: flow.rs  flow_graph.rs  flowfile.rs
core/crates/graph/tests/resources/: simple.toml
core/crates/persistence/src/: test_helper.rs
core/crates/persistence/src/models/: flow.rs
core/crates/persistence/src/repositories/: flow_repo.rs
core/crates/plugins/: Justfile
core/crates/plugins/plugins/anything-plugin-shell/: Cargo.toml
core/crates/plugins/plugins/anything-plugin-shell/src/: lib.rs
core/crates/plugins/plugins/anything-plugin-system-shell/src/: lib.rs
core/crates/runtime/src/core/: config.rs
core/crates/runtime/src/exec/: runner.rs
core/crates/runtime/src/exec/interpreters/: mod.rs  system.rs
core/crates/runtime/src/plugins/: built_in.rs  manager.rs
core/crates/runtime/src/raw/: raw_node.rs
core/crates/tauri-plugin-anything-tauri/src/: builder.rs
core/crates/tauri-plugin-anything-tauri/src/anything/: flows.rs
